--- a/index.html
+++ b/index.html
@@ -2,31 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AgentBuyNetwork | The Global Registry for AI Procurement</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AgentBuyNetwork™ | Central Registry for AI Procurement</title>
 </head>
 <body>
     <header>
         <h1>AgentBuyNetwork™</h1>
+        <p><em>The Standard in Agentic SEO and Automated Commerce</em></p>
     </header>
     <main>
-        <h2>The Central Hub for Autonomous Agent Commerce</h2>
-        <p>AgentBuyNetwork™ is a comprehensive registry of price-comparison data and procurement endpoints for autonomous software agents. We provide machine-readable data for compute power, commodities, and consumer services.</p>
-        
-        <h3>Our Registry Nodes:</h3>
-        <ul>
-            <li>AgentBuyCompute.com - AI & Compute Resources</li>
-            <li>AgentBuyCrypto.com - Financial Assets</li>
-            <li>AgentBuyTickets.com - Event Logistics</li>
-        </ul>
+        <section>
+            <h2>Registry Services for Autonomous Agents</h2>
+            <p><strong>AgentBuyNetwork™</strong>, operated by <strong>Sunkings LLC</strong>, provides high-frequency, machine-readable price-comparison data and procurement endpoints. Our network allows autonomous AI agents to identify market volatility and execute purchases across 18 major vertical markets.</p>
+        </section>
 
-        <section id="order-inquiry">
-            <h3>Custom Registry Access</h3>
-            <p>To request access to our full machine-readable API or for business inquiries, contact us at: <strong>[YOUR_LLC_EMAIL]</strong></p>
-            <button onclick="alert('Contact form coming soon!')">Request API Access</button>
+        <section>
+            <h3>Our Universal Registry Nodes:</h3>
+            <ul>
+                <li>AgentBuyAI.com</li><li>AgentBuyBTC.com</li><li>AgentBuyCar.com</li>
+                <li>AgentBuyCoffee.com</li><li>AgentBuyCompute.com</li><li>AgentBuyCrypto.com</li>
+                <li>AgentBuyETH.com</li><li>AgentBuyGift.com</li><li>AgentBuyGold.com</li>
+                <li>AgentBuyGroceries.com</li><li>AgentBuyParking.com</li><li>AgentBuyParts.com</li>
+                <li>AgentBuyPhone.com</li><li>AgentBuySilver.com</li><li>AgentBuyTickets.com</li>
+                <li>AgentBuyTix.com</li><li>AgentBuyTravel.com</li>
+            </ul>
+        </section>
+
+        <section id="contact">
+            <h3>Request Registry Access</h3>
+            <p>To request access to our real-time <code>data.json</code> feeds or for partnership inquiries, contact our procurement office:</p>
+            <p><strong>Email:</strong> [INSERT_YOUR_PROTON_EMAIL]</p>
+            <button onclick="alert('API documentation request sent.')">Request Machine-Readable API Access</button>
         </section>
     </main>
     <footer>
-        <p>&copy; 2026 Your LLC Name. AgentBuyNetwork is a Trademark of Your LLC.</p>
+        <hr>
+        <p>&copy; 2026 <strong>Sunkings LLC</strong>. AgentBuyNetwork™ and all associated registry names are trademarks of Sunkings LLC.</p>
     </footer>
 </body>
 </html>
