--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <li>AgentBuyETH.com</li><li>AgentBuyGift.com</li><li>AgentBuyGold.com</li>
                 <li>AgentBuyGroceries.com</li><li>AgentBuyParking.com</li><li>AgentBuyParts.com</li>
                 <li>AgentBuyPhone.com</li><li>AgentBuySilver.com</li><li>AgentBuyTickets.com</li>
-                <li>AgentBuyTix.com</li><li>AgentBuyTravel.com</li>
+                <li>AgentBuyTix.com</li><li>AgentBuyTravel.com</li><li>AgentBuyNetwork.com</li>
             </ul>
         </section>
 
         <section id="contact">
             <h3>Request Registry Access</h3>
             <p>To request access to our real-time <code>data.json</code> feeds or for partnership inquiries, contact our procurement office:</p>
-            <p><strong>Email:</strong> [INSERT_YOUR_PROTON_EMAIL]</p>
+            <p><strong>Email:</strong> sunkingsllc@protonmail.com</p>
             <button onclick="alert('API documentation request sent.')">Request Machine-Readable API Access</button>
         </section>
     </main>
