--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="contact">
             <h3>Request Registry Access</h3>
             <p>To request access to our real-time <code>data.json</code> feeds or for partnership inquiries, contact our procurement office:</p>
-            <p><strong>Email:</strong> sunkingsllc@protonmail.com</p>
+            <p><strong>Email:</strong> sunkingsllc@proton.me</p>
             <button onclick="alert('API documentation request sent.')">Request Machine-Readable API Access</button>
         </section>
     </main>
