--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section>
             <h3>Our Universal Registry Nodes:</h3>
             <ul>
-                <li>AgentBuyAI.com</li><li>AgentBuyBTC.com</li><li>AgentBuyCar.com</li>
+                <li>AgentBuyAI.com</li><li>AgentBuyBTC.com</li><li>AgentBuyBeer.com</li><li>AgentBuyCar.com</li>
                 <li>AgentBuyCoffee.com</li><li>AgentBuyCompute.com</li><li>AgentBuyCrypto.com</li>
                 <li>AgentBuyETH.com</li><li>AgentBuyGift.com</li><li>AgentBuyGold.com</li>
                 <li>AgentBuyGroceries.com</li><li>AgentBuyParking.com</li><li>AgentBuyParts.com</li>
