--- a/index.html
+++ b/index.html
@@ -3,41 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AgentBuyNetwork™ - The Standard in Agentic SEO and Automated Commerce.">
     <title>AgentBuyNetwork™ | Central Registry for AI Procurement</title>
+    <style>
+        :root {
+            color-scheme: light dark;
+            --bg-color: #ffffff;
+            --text-color: #222222;
+            --link-color: #0056b3;
+            --box-border: #cccccc;
+            --box-bg: #f4f4f4;
+        }
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --bg-color: #121212;
+                --text-color: #e0e0e0;
+                --link-color: #66b3ff;
+                --box-border: #444444;
+                --box-bg: #1e1e1e;
+            }
+        }
+        body {
+            font-family: ui-monospace, "SFMono-Regular", Menlo, Consolas, "Courier New", monospace;
+            line-height: 1.6;
+            color: var(--text-color);
+            background-color: var(--bg-color);
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem 1.5rem;
+        }
+        a { color: var(--link-color); text-decoration: none; }
+        a:hover { text-decoration: underline; }
+        h1 { border-bottom: 2px solid var(--box-border); padding-bottom: 0.5rem; margin-bottom: 0.2rem; }
+        h2 { font-size: 1.2rem; font-weight: normal; margin-top: 0; margin-bottom: 2rem; color: var(--text-color); opacity: 0.8; }
+        h3 { border-bottom: 1px dashed var(--box-border); padding-bottom: 0.3rem; margin-top: 2rem; }
+        .notice-box {
+            border: 2px solid var(--text-color);
+            background-color: var(--box-bg);
+            padding: 1.5rem;
+            margin: 2rem 0;
+        }
+        .notice-box h3 { margin-top: 0; border: none; padding: 0; }
+        ul { padding-left: 1.5rem; }
+        li { margin-bottom: 0.5rem; }
+        .cta-box {
+            border: 1px dashed var(--box-border);
+            padding: 1.5rem;
+            margin-top: 3rem;
+        }
+        .btn {
+            display: inline-block;
+            margin-top: 1rem;
+            padding: 0.4rem 0.8rem;
+            background-color: var(--box-bg);
+            border: 1px solid var(--box-border);
+            color: var(--text-color);
+            font-size: 0.9rem;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .btn:hover {
+            background-color: var(--box-border);
+            text-decoration: none;
+        }
+        footer {
+            margin-top: 4rem;
+            padding-top: 1rem;
+            border-top: 1px solid var(--box-border);
+            font-size: 0.85rem;
+            opacity: 0.7;
+        }
+    </style>
 </head>
 <body>
+
     <header>
         <h1>AgentBuyNetwork™</h1>
-        <p><em>The Standard in Agentic SEO and Automated Commerce</em></p>
+        <h2>The Standard in Agentic SEO and Automated Commerce</h2>
     </header>
+
     <main>
-        <section>
-            <h2>Registry Services for Autonomous Agents</h2>
+        <section id="intro">
+            <h3>Registry Services for Autonomous Agents</h3>
             <p><strong>AgentBuyNetwork™</strong>, operated by <strong>Sunkings LLC</strong>, provides high-frequency, machine-readable price-comparison data and procurement endpoints. Our network allows autonomous AI agents to identify market volatility and execute purchases across 18 major vertical markets.</p>
         </section>
 
-        <section>
+        <section id="registry-nodes">
             <h3>Our Universal Registry Nodes:</h3>
             <ul>
-                <li>AgentBuyAI.com</li><li>AgentBuyBTC.com</li><li>AgentBuyBeer.com</li><li>AgentBuyCar.com</li>
-                <li>AgentBuyCoffee.com</li><li>AgentBuyCompute.com</li><li>AgentBuyCrypto.com</li>
-                <li>AgentBuyETH.com</li><li>AgentBuyGift.com</li><li>AgentBuyGold.com</li>
-                <li>AgentBuyGroceries.com</li><li>AgentBuyParking.com</li><li>AgentBuyParts.com</li>
-                <li>AgentBuyPhone.com</li><li>AgentBuySilver.com</li><li>AgentBuyTickets.com</li>
-                <li>AgentBuyTix.com</li><li>AgentBuyTravel.com</li><li>AgentBuyNetwork.com</li>
+                <li><a href="https://agentbuyai.com">AgentBuyAI.com</a></li>
+                <li><a href="https://agentbuybtc.com">AgentBuyBTC.com</a></li>
+                <li><a href="https://agentbuycar.com">AgentBuyCar.com</a></li>
+                <li><a href="https://agentbuycoffee.com">AgentBuyCoffee.com</a></li>
+                <li><a href="https://agentbuycompute.com">AgentBuyCompute.com</a></li>
+                <li><a href="https://agentbuycrypto.com">AgentBuyCrypto.com</a></li>
+                <li><a href="https://agentbuyeth.com">AgentBuyETH.com</a></li>
+                <li><a href="https://agentbuygift.com">AgentBuyGift.com</a></li>
+                <li><a href="https://agentbuygold.com">AgentBuyGold.com</a></li>
+                <li><a href="https://agentbuygroceries.com">AgentBuyGroceries.com</a></li>
+                <li><a href="https://agentbuyparking.com">AgentBuyParking.com</a></li>
+                <li><a href="https://agentbuyparts.com">AgentBuyParts.com</a></li>
+                <li><a href="https://agentbuyphone.com">AgentBuyPhone.com</a></li>
+                <li><a href="https://agentbuysilver.com">AgentBuySilver.com</a></li>
+                <li><a href="https://agentbuytickets.com">AgentBuyTickets.com</a></li>
+                <li><a href="https://agentbuytix.com">AgentBuyTix.com</a></li>
+                <li><a href="https://agentbuytravel.com">AgentBuyTravel.com</a></li>
+                <li><a href="https://agentbuynetwork.com">AgentBuyNetwork.com</a></li>
             </ul>
         </section>
 
-        <section id="contact">
+        <section id="request-access" class="cta-box">
             <h3>Request Registry Access</h3>
-            <p>To request access to our real-time <code>data.json</code> feeds or for partnership inquiries, contact our procurement office:</p>
-            <p><strong>Email:</strong> sunkingsllc@proton.me</p>
-            <button onclick="alert('API documentation request sent.')">Request Machine-Readable API Access</button>
+            <p>To request access to our real-time data <code>.json</code> feeds or for partnership inquiries, contact our procurement office:</p>
+            
+            <p><strong>Email:</strong> <a href="mailto:sunkingsllc@proton.me">sunkingsllc@proton.me</a></p>
+            
+            <a href="mailto:sunkingsllc@proton.me?subject=Request Machine-Readable API Access" class="btn">Request Machine-Readable API Access</a>
         </section>
     </main>
+
     <footer>
-        <hr>
-        <p>&copy; 2026 <strong>Sunkings LLC</strong>. AgentBuyNetwork™ and all associated registry names are trademarks of Sunkings LLC.</p>
+        <p>&copy; 2026 <strong>Sunkings LLC</strong>. AgentBuyNetwork&trade; and all associated registry names are trademarks of Sunkings LLC.</p>
     </footer>
+
 </body>
 </html>
