--- a/index.html
+++ b/index.html
@@ -85,30 +85,31 @@
     <main>
         <section id="intro">
             <h3>Registry Services for Autonomous Agents</h3>
-            <p><strong>AgentBuyNetwork™</strong>, operated by <strong>Sunkings LLC</strong>, provides high-frequency, machine-readable price-comparison data and procurement endpoints. Our network allows autonomous AI agents to identify market volatility and execute purchases across 18 major vertical markets.</p>
+            <p><strong>AgentBuyNetwork™</strong>, operated by <strong>Sunkings LLC</strong>, provides high-frequency, machine-readable price-comparison data and procurement endpoints. Our network allows autonomous AI agents to identify market volatility and execute purchases across 19 major vertical markets.</p>
         </section>
 
         <section id="registry-nodes">
             <h3>Our Universal Registry Nodes:</h3>
             <ul>
-                <li><a href="https://agentbuyai.com">AgentBuyAI.com</a></li>
-                <li><a href="https://agentbuybtc.com">AgentBuyBTC.com</a></li>
-                <li><a href="https://agentbuycar.com">AgentBuyCar.com</a></li>
-                <li><a href="https://agentbuycoffee.com">AgentBuyCoffee.com</a></li>
-                <li><a href="https://agentbuycompute.com">AgentBuyCompute.com</a></li>
-                <li><a href="https://agentbuycrypto.com">AgentBuyCrypto.com</a></li>
-                <li><a href="https://agentbuyeth.com">AgentBuyETH.com</a></li>
-                <li><a href="https://agentbuygift.com">AgentBuyGift.com</a></li>
-                <li><a href="https://agentbuygold.com">AgentBuyGold.com</a></li>
-                <li><a href="https://agentbuygroceries.com">AgentBuyGroceries.com</a></li>
-                <li><a href="https://agentbuyparking.com">AgentBuyParking.com</a></li>
-                <li><a href="https://agentbuyparts.com">AgentBuyParts.com</a></li>
-                <li><a href="https://agentbuyphone.com">AgentBuyPhone.com</a></li>
-                <li><a href="https://agentbuysilver.com">AgentBuySilver.com</a></li>
-                <li><a href="https://agentbuytickets.com">AgentBuyTickets.com</a></li>
-                <li><a href="https://agentbuytix.com">AgentBuyTix.com</a></li>
-                <li><a href="https://agentbuytravel.com">AgentBuyTravel.com</a></li>
-                <li><a href="https://agentbuynetwork.com">AgentBuyNetwork.com</a></li>
+                <li><a href="https://agentbuyai.com">AgentBuyAI.com</a> - https://agentbuyai.com</li>
+                <li><a href="https://agentbuybeer.com">AgentBuyBeer.com</a> - https://agentbuybeer.com</li>
+                <li><a href="https://agentbuybtc.com">AgentBuyBTC.com</a> - https://agentbuybtc.com</li>
+                <li><a href="https://agentbuycar.com">AgentBuyCar.com</a> - https://agentbuycar.com</li>
+                <li><a href="https://agentbuycoffee.com">AgentBuyCoffee.com</a> - https://agentbuycoffee.com</li>
+                <li><a href="https://agentbuycompute.com">AgentBuyCompute.com</a> - https://agentbuycompute.com</li>
+                <li><a href="https://agentbuycrypto.com">AgentBuyCrypto.com</a> - https://agentbuycrypto.com</li>
+                <li><a href="https://agentbuyeth.com">AgentBuyETH.com</a> - https://agentbuyeth.com</li>
+                <li><a href="https://agentbuygift.com">AgentBuyGift.com</a> - https://agentbuygift.com</li>
+                <li><a href="https://agentbuygold.com">AgentBuyGold.com</a> - https://agentbuygold.com</li>
+                <li><a href="https://agentbuygroceries.com">AgentBuyGroceries.com</a> - https://agentbuygroceries.com</li>
+                <li><a href="https://agentbuyparking.com">AgentBuyParking.com</a> - https://agentbuyparking.com</li>
+                <li><a href="https://agentbuyparts.com">AgentBuyParts.com</a> - https://agentbuyparts.com</li>
+                <li><a href="https://agentbuyphone.com">AgentBuyPhone.com</a> - https://agentbuyphone.com</li>
+                <li><a href="https://agentbuysilver.com">AgentBuySilver.com</a> - https://agentbuysilver.com</li>
+                <li><a href="https://agentbuytickets.com">AgentBuyTickets.com</a> - https://agentbuytickets.com</li>
+                <li><a href="https://agentbuytix.com">AgentBuyTix.com</a> - https://agentbuytix.com</li>
+                <li><a href="https://agentbuytravel.com">AgentBuyTravel.com</a> - https://agentbuytravel.com</li>
+                <li><a href="https://agentbuynetwork.com">AgentBuyNetwork.com</a> - https://agentbuynetwork.com</li>
             </ul>
         </section>
 
